# funcional

./: final.cabal  stack.yaml
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-11994/gtk-0.15.5/: gtk2hs_macros.h
src/: Converter.hs  Gradient.hs  Graphic.hs  Main.hs  Noise.hs
