name:                final
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/final#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable final
  hs-source-dirs:      src
  other-modules:       Gradient, Converter
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.8,
    -- gi-gtk == 3.0.36, gi-gdkpixbuf == 2.0.24,
    repa == 3.4.1.4, repa-io == 3.4.1.1,
    repa-algorithms == 3.4.1.3,
    JuicyPixels == 3.3.5